<?xml version="1.0" encoding="utf-8"?>
<!-- android:background="@color/background" -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent"
	android:orientation="horizontal" android:gravity="center_vertical"
	android:background="@drawable/main">
	<LinearLayout android:orientation="vertical"
		android:gravity="center_horizontal" android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:layout_gravity="center_vertical">
		<Button android:id="@+id/businesses_button" android:textColor="@color/text_color"
			android:textStyle="bold" android:layout_width="175sp"
			android:layout_height="45sp" android:text="@string/businesses_label"
			android:background="@drawable/custom_button" />
		<Button android:id="@+id/favorites_button" android:textColor="@color/text_color"
			android:textStyle="bold" android:layout_width="175sp"
			android:layout_height="45sp" android:text="@string/favorites_label"
			android:background="@drawable/custom_button" />
		<Button android:id="@+id/add_button" android:textColor="@color/text_color"
			android:textStyle="bold" android:layout_width="175sp"
			android:layout_height="45sp" android:text="@string/add_label"
			android:background="@drawable/custom_button" />
		<Button android:id="@+id/about_button" android:textColor="@color/text_color"
			android:textStyle="bold" android:layout_width="175sp"
			android:layout_height="45sp" android:text="@string/about_label"
			android:background="@drawable/custom_button" />
	</LinearLayout>
</LinearLayout>